# Nek5000

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  index.html  nek-bisect.sh  nek.mk
core/: GMRES  HEADER  HSMG  NEKMOOSE  NEKUSE  SIZE.inc  acc.f  comm_mpi.f  drive1.f  drive2.f  dssum.f  gfdm_par.f  global_adjoint.F90  global_avg.F90  global_ctimer.F90  global_cvode.F90  global_dealias.F90  global_domain.F90  global_dxyz.F90  global_eigen.F90  global_esolv.F90  global_fdmh1.F90  global_geom.F90  global_gfldr.F90  global_globalcom.F90  global_gmres.F90  global_hsmg.F90  global_input.F90  global_ixyz.F90  global_mass.F90  global_mvgeom.F90  global_neknek.F90  global_nekuse.F90  global_noncon.F90  global_opctr.F90  global_orthop.F90  global_orthostrs.F90  global_orthot.F90  global_orthov.F90  global_parallel.F90  (+31 more)
cxx-driver/: Makefile  main.cpp
cxx-driver/eddy/: makenek
f77_to_f90/: incl_to_mod.py
short_tests/: NekTests.py
short_tests/case1/: SIZE  makenek.gpu.jlse  run-volta.sh  t3.97308d2.np8.stderr  t3.97308d2.np8.stdout  t3.rea  t3.usr
short_tests/lib/: nekBinBuild.py  nekFileConfig.py  nekTestCase.py
short_tests/singlerod/: SIZE  singlerod.ref.output
short_tests/turbChannel/: SIZE
tools/amg_hypre/hypre/: install
